# teden

./: .dockerignore  .env  .env.example  .gitignore  Docker.md  Dockerfile  ProductPolicy.php  README.md  RegisterController.php  availability_manage.blade.php  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  pyproject.toml  register.blade.php  requirements.txt  services_index.blade.php  start.sh
.github/workflows/: python-package.yml
admin_panel/: urls.py  views.py
admin_panel/templates/: base_admin.html  dashboard.html  manage_products.html  manage_users.html
appointments/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
appointments/migrations/: 0001_initial.py  0001_service_category.py  0002_appointment_payment_id_appointment_payment_status_and_more.py  0002_initial.py  0002_servicereview.py  (+2 more)
cart/: forms.py  models.py  urls.py  views.py
cart2/: urls.py  views.py
core/: urls.py  views.py
dashboard/: decorators.py  urls.py  views.py
dashboard2/: urls.py  views.py
orders/: models.py  urls.py  utils.py  views.py
payments/: urls.py  utils.py  views.py
plans/: apps.py  models.py  signals.py  tasks.py  update_plans.py  urls.py  utils.py  views.py
products/: forms.py  models.py  models_productimage.py  urls.py  views.py
reviews/: forms.py  models.py  views.py
services/: mercadopago.py
store/: admin.py  forms.py  forms_store.py  models.py  urls.py  utils.py  views.py
teden/: ngrok_middleware.py  settings.py  urls.py  wsgi.py
users/: form_tags.py  forms.py  models.py  sync_mp_tokens.py  urls.py  views.py
(+165 files in other folders)
