[project]
name = "teden"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Ariel Luna",email = "79757865+nico-luna@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref (==3.8.1)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "cloudinary (==1.44.0)",
    "cryptography (==45.0.3)",
    "django (==5.2.1)",
    "django-allauth (==65.9.0)",
    "django-cloudinary-storage (==0.3.0)",
    "django-widget-tweaks (==1.5.0)",
    "gunicorn (==23.0.0)",
    "idna (==3.10)",
    "mercadopago (==2.3.0)",
    "packaging (==25.0)",
    "pillow (==11.2.1)",
    "pycparser (==2.22)",
    "pyjwt (==2.10.1)",
    "requests (==2.32.3)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "stripe (==12.1.0)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
